--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,11 @@ web = [
 gcode = "0.6.1"
 bevy = {version="0.4.0", default-features=false}
 bevy_webgl2 = {version="0.4.0", optional=true}
+#bevy_pbr = { version="0.4.0"}
+bevy_egui = "0.1"
 winit = {version = "0.24.0"}
 rayon = "1.5.0"
+nfd = "0.0.4"
 
 
 [dependencies.web-sys]
