--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ web-sys = "0.3.2"
 console_error_panic_hook = "0.1.6"
 wasm-bindgen = "0.2.70"
 js-sys = "0.3.47"
+lazy_static = "1.4.0"
 
 [patch.crates-io]
 rand = { path = "./deps/rand/"}
@@ -56,5 +57,3 @@ opt-level = 1
 [profile.release]
 lto = true
 opt-level = 's'
-
-
